--- a/src/components/base-layout/styles.module.css
+++ b/src/components/base-layout/styles.module.css
@@ -1,12 +1,12 @@
 .siderWrapper {
-  background-color: rgb(117, 150, 217);
+  background-color: var(--color-indigo);
   border-top-right-radius: 16px;
   border-bottom-right-radius: 16px;
   height: 100vh;
 }
 
 .menuWrapper {
-  background-color: rgb(117, 150, 217);
+  background-color: var(--color-indigo);
 }
 
 .headerWrapper {
