--- a/src/components/base-layout/styles.module.css
+++ b/src/components/base-layout/styles.module.css
@@ -2,7 +2,8 @@
   background-color: var(--color-indigo);
   border-top-right-radius: 16px;
   border-bottom-right-radius: 16px;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
 }
 
 .menuWrapper {
