--- a/src/components/header-app/styles.module.css
+++ b/src/components/header-app/styles.module.css
@@ -7,3 +7,7 @@
   padding: 0 12px;
   border-bottom: 1px solid var(--color-indigo-secondary);
 }
+
+.balanceText {
+  color: var(--color-indigo);
+}
