--- a/src/components/forms/transition-form/styles.module.css
+++ b/src/components/forms/transition-form/styles.module.css
@@ -14,3 +14,13 @@
 .cancelButton {
   margin-left: 12px;
 }
+
+.wrapperCategories {
+  width: 100%;
+  display: flex;
+  gap: 8px;
+
+  & > div {
+    width: 100%;
+  }
+}
