--- a/src/components/common-components/base-card-layout/styles.module.css
+++ b/src/components/common-components/base-card-layout/styles.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
   border-radius: 16px;
   border: 1px solid var(--color-border-dark);
   padding: 16px;
