--- a/src/components/header-app/styles.module.css
+++ b/src/components/header-app/styles.module.css
@@ -1,13 +1,18 @@
 .headerWrapper {
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: flex-end;
   width: 100%;
-  background-color: inherit;
-  padding: 0 12px;
+  background-color: var(--color-bg);
+  padding: 0 32px;
   border-bottom: 1px solid var(--color-indigo-secondary);
 }
 
 .balanceText {
   color: var(--color-indigo);
+}
+
+.selectWrapper {
+  width: 150px;
+  margin-right: auto;
 }
